--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,44 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+		    <groupId>org.apache.cxf</groupId>
+		    <artifactId>cxf-codegen-plugin</artifactId>
+		    <version>${cxf.version}</version>
+		    <executions>
+		    	<execution>
+		            <id>generate-ws-bo</id>
+		            <phase>generate-sources</phase>
+		            <configuration>
+		                <sourceRoot>${project.build.directory}/generated/ws/bo</sourceRoot>
+		                <wsdlOptions>
+		                    <wsdlOption>
+		                        <wsdl>${project.basedir}/src/main/resources/wsspec/ssu-ws/spec/service/bo/back-office-ws.wsdl</wsdl>
+		                        <wsdlLocation>classpath:wsspec/ssu-ws/spec/service/bo/back-office-ws.wsdl</wsdlLocation>
+		                    </wsdlOption>
+		                </wsdlOptions>
+		            </configuration>
+		            <goals>
+		                <goal>wsdl2java</goal>
+		            </goals>
+		        </execution>
+		       
+		    </executions>
+		</plugin> 
+			
+			
+			
+			
 		</plugins>
 	</build>
 
